# Ai-Personal-Assistant

./: .gitignore  LICENSE  README.md
teamf-backend/: .env  README.md  config.py  pyproject.toml  requirements.txt  run.py
teamf-backend/app/: __init__.py
teamf-backend/app/models/: task_model.py  user_model.py
teamf-backend/app/routes/: __init__.py  task_route.py  user_route.py
teamf-backend/app/services/: task_service.py  user_service.py
teamf-frontend/: .env  .eslintrc.json  README.md  package-lock.json  package.json
teamf-frontend/public/mock/: users.json
teamf-frontend/src/: App.tsx  index.tsx  serviceWorkerRegistration.ts
teamf-frontend/src/api/: tasks.ts  user.ts
teamf-frontend/src/assets/styles/: globalStyles.js
teamf-frontend/src/components/: AddTask.tsx  FilterCalendar.tsx  HamburguerMenu.tsx  Menu.tsx  NavMenu.tsx  Search.tsx  SingleCalendar.tsx  Streak.tsx  TaskBody.tsx  TaskList.tsx  UpdatingSpinner.tsx  UserList.tsx
teamf-frontend/src/plugins/: stores.ts
teamf-frontend/src/routes/: PrivateRoute.tsx  RoutesGroup.tsx
teamf-frontend/src/stores/user/: userActions.ts  userReducer.ts
teamf-frontend/src/utils/: calendarUtils.ts  isJWTValid.ts
teamf-frontend/src/views/: EditTask.tsx  Home.tsx  Login.tsx  Register.tsx
